New lesson page

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -41,7 +41,7 @@
       <th style="width:15%;">Date</th>
       <th>Topics(s)</th>
       <th>Lectures</th>
-      <th style="width:35%;">Read / Watch / Suggested Labs</th>
+      <th style="width:35%;">Read / Watch / Recommended Labs</th>
     </tr>
   </thead>
   <tbody>
@@ -162,7 +162,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler I</a> <br />
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
-        <img src="../images/book.png" /> <a href="../assets/MySQL-Cheat-Sheet.pdf" target="_new">MySQL Cheat Sheet</a> <br />
+        <img src="../images/check.png" /> <a href="../assets/MySQL-Cheat-Sheet.pdf" target="_new">MySQL Cheat Sheet</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/16318?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=9315001" target="_new">AWS Relational Database Service</a>
       </td>
     </tr>
@@ -181,22 +181,17 @@
       <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="" target="_new">Database-driven Workflows</a>
+        <img src="../images/book.png" /> <a href="../assets/learning-mysql.pdf" target="_new">Learning MySQL</a> <br />
+        <img src="../images/book.png" /> <a href="https://data-notes.co/relational-database-101-a8ace25c12a" target="_new">Relational Databases & Big Data</a> <br />
+        <img src="../images/lab.png" /> <a href="xxxx" target="_new">Relational Database</a>
       </td>
     </tr>
     <tr>
       <td>10</td>
       <td>4/5/2021</td>
-      <td>NoSQL & Unstructured Data</td>
-      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
-      <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler II</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=egsQ3QRT_Xc&feature=youtu.be" target="_new">MongoDB in 5 Minutes</a> <br />
-        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
-      </td>
+      <td><i>Catch-Up Week</i></td>
+      <td></td>
+      <td></td>
     </tr>
     <tr>
       <td></td>
@@ -208,43 +203,33 @@
       </td>
     </tr>
     <tr>
+      <td></td>
+      <td>4/12/2021</td>
+      <td><b>First Data Project Due</b></td>
+      <td></td>
+      <td><img src="../images/writing.png" /> See prompt</td>
+    </tr>
+    <tr>
       <td>11</td>
       <td>4/12/2021</td>
+      <td>NoSQL & Unstructured Data</td>
+      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
+      <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler II</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=egsQ3QRT_Xc&feature=youtu.be" target="_new">MongoDB in 5 Minutes</a> <br />
+        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
+      </td>
+    </tr>
+    <tr>
+      <td>12</td>
+      <td>4/19/2021</td>
       <td>NoSQL Database Services<br /><b>NO DISCUSSION 4/15/2021</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a>
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>4/16/2021</td>
-      <td><b>First Data Project Due</b></td>
-      <td></td>
-      <td><img src="../images/writing.png" /> See prompt</td>
-    </tr>
-    <tr>
-      <td>12</td>
-      <td>4/19/2021</td>
-      <td>Cloud Solutions</td>
-      <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
-      <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
-        <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
-        <img src="../images/lab.png" /> <a href="" target="_new">AWS Athena</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> <br />
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>4/26/2021</td>
-      <td><b>Quiz 4</b></td>
-      <td></td>
-      <td>
-        <img src="../images/writing.png" /> Take the Quiz<br />
       </td>
     </tr>
     <tr>
@@ -255,9 +240,22 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
         <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
+        <img src="../images/lab.png" /> <a href="" target="_new">AWS Athena</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15698?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A1%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744616" target="_new">Serverless Text-to-Speech</a> <br />
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
+        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
         <img src="../images/lab.png" /> <a href="https://serverless-data-lake-immersionday.workshop.aws/en/introduction.html" target="_new">Data Lakes</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/12762?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8744166" target="_new">Serverless + Event-driven</a> <br />
-        
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>4/26/2021</td>
+      <td><b>Quiz 4</b></td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
       </td>
     </tr>
     <tr>
