--- a/lectures/09-relational-databases.html
+++ b/lectures/09-relational-databases.html
@@ -48,7 +48,7 @@ Contents:
 
 <ol>
   <li>In your local clone of the course repository, issue this command to retrieve updates: <pre><code>git pull origin main</code></pre></li>
-  <li>Within the course repository, locate the <code>11-datasci-sql</code> folder and the <code>tracking.sql</code> SQL script.</li>
+  <li>Within the course repository, locate the <code>practice/11-datasci-sql/</code> directory and the <code>tracking.sql</code> SQL script.</li>
   <li>Using the RDS instance you created last week, load the SQL file into your database. You should now have a new table named "tracking".</li>
   <li>Visit <a href="https://www.mockaroo.com/" target="_new">Mockaroo.com</a> and create a new table of mock data. This table should consist
       of 1000 records with at least 6 columns of data.</li>
@@ -56,6 +56,7 @@ Contents:
   <li>Your export from Mockaroo should be SQL format, but do not check the "include CREATE TABLE" option.</li>
   <li>Load your data into the database. Debug and correct errors.</li>
   <li>Should you want a greater challenge, export the Mockaroo data into CSV or JSON format and import.</li>
+  <li>For an even greater challenge, rewrite the FastAPI application to connect to your new table.</li>
 </ol>
 
       </section>
