--- a/lectures/09-relational-databases.html
+++ b/lectures/09-relational-databases.html
@@ -51,7 +51,7 @@ Contents:
   <li>Within the course repository, locate the <code>practice/11-datasci-sql/</code> directory and the <code>tracking.sql</code> SQL script.</li>
   <li>Using the RDS instance you created last week, load the SQL file into your database. You should now have a new table named "tracking".</li>
   <li>Visit <a href="https://www.mockaroo.com/" target="_new">Mockaroo.com</a> and create a new table of mock data. This table should consist
-      of 1000 records with at least 6 columns of data.</li>
+      of 1000 records with at least 6 columns of data. Be sure to generate one column containing a unique key.</li>
   <li>Create a new table in your RDS instance matching the columns and data types of your mock table data.</li>
   <li>Your export from Mockaroo should be SQL format, but do not check the "include CREATE TABLE" option.</li>
   <li>Load your data into the database. Debug and correct errors.</li>
