--- a/lectures/09-relational-databases.html
+++ b/lectures/09-relational-databases.html
@@ -56,7 +56,7 @@ Contents:
   <li>Your export from Mockaroo should be SQL format, but do not check the "include CREATE TABLE" option.</li>
   <li>Load your data into the database. Debug and correct errors.</li>
   <li>Should you want a greater challenge, export the Mockaroo data into CSV or JSON format and import.</li>
-  <li>For an even greater challenge, rewrite the FastAPI application to connect to your new table.</li>
+  <li>For an even greater challenge, rewrite the FastAPI application (found within the same directory) to connect to your new table.</li>
 </ol>
 
       </section>
