More updates and tracking

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -183,13 +183,13 @@
       <td>
         <img src="../images/book.png" /> <a href="../assets/learning-mysql.pdf" target="_new">Learning MySQL</a> <br />
         <img src="../images/book.png" /> <a href="https://data-notes.co/relational-database-101-a8ace25c12a" target="_new">Relational Databases & Big Data</a> <br />
-        <img src="../images/lab.png" /> <a href="xxxx" target="_new">Relational Database</a>
+        <img src="../images/check.png" /> <a href="../lectures/09-relational-databases.html#exercises">Relational Database</a>
       </td>
     </tr>
     <tr>
       <td>10</td>
       <td>4/5/2021</td>
-      <td><i>Catch-Up Week</i></td>
+      <td><i>Catch-Up</i></td>
       <td></td>
       <td></td>
     </tr>
