--- a/schedule/index.html
+++ b/schedule/index.html
@@ -172,7 +172,7 @@
       <td><b>Quiz 2</b></td>
       <td></td>
       <td>
-        <img src="../images/writing.png" /> Take the Quiz<br />
+        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Take the Quiz</a><br />
       </td>
     </tr>
     <tr>
@@ -207,7 +207,7 @@
       <td>4/12/2021</td>
       <td><b>First Data Project Due</b></td>
       <td></td>
-      <td><img src="../images/writing.png" /> See prompt</td>
+      <td><img src="../images/writing.png" /> <a href="../assets/data-project-1.pdf" style="font-weight:bold"> See prompt</a></td>
     </tr>
     <tr>
       <td>11</td>
@@ -216,8 +216,7 @@
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler II</a> <br />
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=egsQ3QRT_Xc&feature=youtu.be" target="_new">MongoDB in 5 Minutes</a> <br />
-        <!-- <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
       </td>
     </tr>
