--- a/schedule/index.html
+++ b/schedule/index.html
@@ -160,8 +160,7 @@
       <td>SQL & Relational Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler I</a> <br />
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
         <img src="../images/check.png" /> <a href="../assets/MySQL-Cheat-Sheet.pdf" target="_new">MySQL Cheat Sheet</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/16318?catalog_rank=%7B%22rank%22%3A3%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=9315001" target="_new">AWS Relational Database Service</a>
       </td>
@@ -215,7 +214,7 @@
       <td>NoSQL & Unstructured Data</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler II</a> <br />
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
       </td>
