DB Nirvana ebook

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -216,7 +216,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">Hands-On MongoDB</a>
       </td>
     </tr>
     <tr>
@@ -225,9 +225,10 @@
       <td>NoSQL Database Services<br /><b>NO DISCUSSION 4/15/2021</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br />
-        <img src="../images/book.png" /> <a href="https://d1.awsstatic.com/whitepapers/aws-overview.pdf?did=wp_card&trk=wp_card" target="_new">Reading Link</a> <br /> -->
+        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
+        <img src="../images/book.png" /> <a href="../assets/oreilly-database-nirvana.pdf" target="_new">Database Nirvana (ch. X)</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a>
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
       </td>
     </tr>
     <tr>
