--- a/schedule/index.html
+++ b/schedule/index.html
@@ -204,7 +204,7 @@
     <tr>
       <td></td>
       <td>4/12/2021</td>
-      <td><b>First Data Project Due</b></td>
+      <td><b>Data Project 1 Due</b></td>
       <td></td>
       <td><img src="../images/writing.png" /> <a href="../assets/data-project-1.pdf" style="font-weight:bold"> See prompt</a></td>
     </tr>
@@ -267,7 +267,7 @@
     <tr>
       <td></td>
       <td>5/10/2021</td>
-      <td><b>Final Data Project Due</b></td>
+      <td><b>Data Project 2 Due</b></td>
       <td></td>
       <td><img src="../images/writing.png" /> See prompt</td>
     </tr>
