--- a/schedule/index.html
+++ b/schedule/index.html
@@ -227,8 +227,8 @@
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
         <img src="../images/book.png" /> <a href="../assets/oreilly-database-nirvana.pdf" target="_new">Database Nirvana (ch. X)</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a>
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a>
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a> <br />
+        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a> <br />
       </td>
     </tr>
     <tr>
