--- a/schedule/index.html
+++ b/schedule/index.html
@@ -216,7 +216,7 @@
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
-        <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">Hands-On MongoDB</a>
+        <img src="../images/lab.png" /> <a href="https://github.com/ds3002/course/blob/main/practice/12-nosql-database/mongodb.md" target="_new">Hands-On MongoDB</a>
       </td>
     </tr>
     <tr>
