--- a/schedule/index.html
+++ b/schedule/index.html
@@ -198,7 +198,7 @@
       <td><b>Quiz 3</b></td>
       <td></td>
       <td>
-        <img src="../images/writing.png" /> Take the Quiz<br />
+        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new"><b>Take the Quiz</b></a><br />
       </td>
     </tr>
     <tr>
