--- a/schedule/index.html
+++ b/schedule/index.html
@@ -265,6 +265,15 @@
     </tr>
     <tr>
       <td></td>
+      <td>5/3/2021</td>
+      <td><b>Bonus Quiz </b></td>
+      <td></td>
+      <td>
+        <img src="../images/writing.png" /> Take the Quiz<br />
+      </td>
+    </tr>
+    <tr>
+      <td></td>
       <td>5/10/2021</td>
       <td><b>Data Project 2 Due</b></td>
       <td></td>
