Don't forget the _

--- a/lectures/12-nosql-datasci.html
+++ b/lectures/12-nosql-datasci.html
@@ -68,7 +68,7 @@ storage capacity</p>
   <li><a href="https://code.datasciencedojo.com/datasciencedojo/datasets/" target="_new">Select another dataset</a>
 </ul>
 
-<p>You may want to refer to the <a href="https://www.kite.com/python/docs/pymongo.collection.Collection.insert_one" target="_new">insertOne</a> or the <a href="https://www.kite.com/python/docs/pymongo.collection.Collection.insert_many">insert_many</a> PyMongo methods to complete this task.
+<p>You may want to refer to the <a href="https://www.kite.com/python/docs/pymongo.collection.Collection.insert_one" target="_new">insert_one</a> or the <a href="https://www.kite.com/python/docs/pymongo.collection.Collection.insert_many">insert_many</a> PyMongo methods to complete this task.
 
       </section>
       <footer>
