--- a/schedule/index.html
+++ b/schedule/index.html
@@ -211,7 +211,7 @@
     <tr>
       <td>11</td>
       <td>4/12/2021</td>
-      <td>NoSQL & Unstructured Data</td>
+      <td>NoSQL & Unstructured Data<br /><b>NO DISCUSSION 4/15/2021</b></td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
@@ -222,7 +222,7 @@
     <tr>
       <td>12</td>
       <td>4/19/2021</td>
-      <td>NoSQL Database Services<br /><b>NO DISCUSSION 4/15/2021</b></td>
+      <td>NoSQL Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
