Don't forget the _

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -124,7 +124,7 @@
     <tr>
       <td></td>
       <td>3/8/2021</td>
-      <td><b>Quiz 1</b> - Due by 3/12/2021</td>
+      <td><b>Quiz 1 Released</b> - Due by 3/12/2021</td>
       <td></td>
       <td>
         <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Take the Quiz</a><br />
@@ -168,7 +168,7 @@
     <tr>
       <td></td>
       <td>3/29/2021</td>
-      <td><b>Quiz 2</b></td>
+      <td><b>Quiz 2 Released</b></td>
       <td></td>
       <td>
         <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Take the Quiz</a><br />
@@ -195,7 +195,7 @@
     <tr>
       <td></td>
       <td>4/12/2021</td>
-      <td><b>Quiz 3</b></td>
+      <td><b>Quiz 3 Released</b></td>
       <td></td>
       <td>
         <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new"><b>Take the Quiz</b></a><br />
@@ -250,7 +250,7 @@
     <tr>
       <td></td>
       <td>4/26/2021</td>
-      <td><b>Quiz 4</b></td>
+      <td><b>Quiz 4 Released</b></td>
       <td></td>
       <td>
         <img src="../images/writing.png" /> Take the Quiz<br />
@@ -266,7 +266,7 @@
     <tr>
       <td></td>
       <td>5/3/2021</td>
-      <td><b>Bonus Quiz </b></td>
+      <td><b>Bonus Quiz Released</b></td>
       <td></td>
       <td>
         <img src="../images/writing.png" /> Take the Quiz<br />
