--- a/schedule/index.html
+++ b/schedule/index.html
@@ -225,8 +225,7 @@
       <td>NoSQL Database Services</td>
       <td><a href="https://l.uvarc.io/ds3002-lectures" target="_new">Watch</a></td>
       <td>
-        <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
-        <img src="../images/book.png" /> <a href="../assets/oreilly-database-nirvana.pdf" target="_new">Database Nirvana (ch. X)</a> <br />
+        <img src="../images/check.png" /> <a href="https://nmagee.github.io/ds3002/lectures/12-nosql-datasci.html#exercise" target="_new">MongoDB Data Ingestion</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/579?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646398" target="_new">GCP BigTable</a> <br />
         <img src="../images/lab.png" /> <a href="https://www.qwiklabs.com/focuses/15604?catalog_rank=%7B%22rank%22%3A5%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=8646367" target="_new">CRUD using DynamoDB</a> <br />
       </td>
