--- a/schedule/index.html
+++ b/schedule/index.html
@@ -271,7 +271,7 @@
       <td>5/10/2021</td>
       <td><b>Data Project 2 Due</b></td>
       <td></td>
-      <td><img src="../images/writing.png" /> See prompt</td>
+      <td><img src="../images/writing.png" /> <a href="../assets/data-project-2.pdf" style="font-weight:bold"> See prompt</a></td>
     </tr>
   </tbody>
 </table>
