Update the home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>DS2002 Data Science Systems - UVA Spring 2024</title>
+    <title>DS2002 Data Science Systems I - UVA Spring 2024</title>
     <link rel="stylesheet" href="https://nmagee.github.io/ds2002/stylesheets/styles.css">
     <link rel="stylesheet" href="https://nmagee.github.io/ds2002/stylesheets/github-light.css">
     <link rel="Shortcut Icon" href="https://www.rc.virginia.edu/images/favicon.ico" type="image/x-icon" />
@@ -12,13 +12,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/ds2002/" style="color:black;text-decoration:none;">DS2002 Data Science Systems</a></h1>
+        <h1><a href="https://nmagee.github.io/ds2002/" style="color:black;text-decoration:none;">DS2002 Data Science Systems I</a></h1>
         <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2024</p>
         <div style="min-height:2rem;"></div>
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/schedule/">Review the<strong>Schedule</strong></a></li>
           <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds3002-discord" target="_new">Discussions on <strong>Discord</strong></a></li>
         </ul>
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/labs/">Full list of <strong>Labs</strong></a></li>
@@ -46,15 +45,6 @@
   <li><a href="#other" style="text-decoration:none;color:black;">Other Details</a></li>
   <li><a href="#contact" style="text-decoration:none;color:black;">Support or Contact</a></li>
 </ul>
-
-<div style="padding:2rem 2rem 0rem 2rem;border:solid 1px #ccc;background-color:#dff0d8;margin-bottom:2rem;">
-  <h3 style="font-size:120%;">Spring 2021 - This course will be held entirely online</h3>
-  <p>This course is being offered <strong>ONLINE SYNCHRONOUSLY</strong>. Most lectures will be video streams to be watched whenever the student chooses.
-  Class discussion, more specifics of the content, and Q&A will be held in <strong>REAL-TIME each Thursday from 11:00am-12:00pm EDT</strong>. Students will be expected to attend these discussions having viewed the lectures and completed all reading and external video assignments beforehand.</p>
-  <p>No formal Office hours will be held weekly. Instead, drop your question in the <b>#office-hours</b> channel in Discord or DM a TA or Instructor to set up a time to chat.</p>
-
-  <p><a href="schedule/" style="font-decoration:none;color:black;"><button style="padding:0.4rem 0.8rem 0.4rem 0.8rem;background-color:white;border:solid 1px #ccc;">View the Schedule</button></a></p>
-</div>
 
 <h2><a id="audience" class="anchor" href="#audience" name="audience" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Audience</h2>
 <p>This course will emphasize hands-on experience in the creation, management, and consumption of various computational services that support the practice of data science. For the purposes of getting started I will assume that you fit roughly into at least one of three categories as you approach the subject:</p>
