Adding video link

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -73,6 +73,7 @@
       <td>Data: Storage & Management</td>
       <td><a href="https://l.uvarc.io/ds2002-lectures" target="_new">Watch</a></td>
       <td>
+        <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=LeCJaTfEnEw" target="_new">Data Lakes & Analytics</a> <br />
         <img src="../images/book.png" /> <a href="../assets/modern-cloud-data-platform.pdf" target="_new">Cloud Data Platforms</a> <br />
         <img src="../images/book.png" /> <a href="../assets/data-science-data-management.pdf" target="_new">Data Management</a> <br />
