UPdate to schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -12,19 +12,19 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://nmagee.github.io/ds2002/" style="color:black;text-decoration:none;">DS2002 Data Science Systems</a></h1>
-        <p>Neal Magee, Ph.D.<br />Solution Architect, Research Computing<br />University of Virginia, Spring 2021</p>
+        <h1><a href="https://nmagee.github.io/ds2002/" style="color:black;text-decoration:none;">DS2002 Data Science Systems I</a></h1>
+        <p>Neal Magee, Ph.D.<br />Associate Professor, Data Science<br />University of Virginia, Spring 2024</p>
 
         <div style="min-height:2rem;"></div>
 
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/">Return to the<strong>Syllabus</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds2002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds2002-discord">Discussions on <strong>Discord</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds2002-lectures" target="_new">Course LMS<strong>Canvas</strong></a></li>
+          <li><a href="https://l.uvarc.io/ds2002-lectures" target="_new">Course Code<strong>GitHub</strong></a></li>
         </ul>
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/labs/">Full list of <strong>Labs</strong></a></li>
-          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
+          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>AWS</strong></a></li>
           <li><a href="https://github.com/ds2002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
         </ul>
       </header>
@@ -56,7 +56,7 @@
     </tr>
     <tr>
       <td>01</td>
-      <td>2/1/2021</td>
+      <td>2/1/2024</td>
       <td>Course introduction: Data Engineering Basics</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=nMyuCdqzpZc" target="_new">Netflix Data Analytics</a> <br />
@@ -66,7 +66,7 @@
     </tr>
     <tr>
       <td>02</td>
-      <td>2/8/2021</td>
+      <td>2/8/2024</td>
       <td>Data: Storage & Management</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=8I0GAGJEx4c" target="_new">A Brief History of UNIX</a> <br />
@@ -81,7 +81,7 @@
     </tr>
     <tr>
       <td>03</td>
-      <td>2/15/2021</td>
+      <td>2/15/2024</td>
       <td>Data: Scripting, Pipelines, and Automation</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=C6Abv87D5dU" target="_new">Data Pipeline Frameworks</a> <br />
@@ -94,7 +94,7 @@
     </tr>
     <tr>
       <td>04</td>
-      <td>2/22/2021</td>
+      <td>2/22/2024</td>
       <td>Consuming APIs</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=s7wmiS2mSXY" target="_new">What is an API?</a> <br />
@@ -106,7 +106,7 @@
     </tr>
     <tr>
       <td>05</td>
-      <td>3/1/2021</td>
+      <td>3/1/2024</td>
       <td>Creating APIs</td>
       <td>
         <!-- <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=2l6gI-ksdKs" target="_new">Video Link</a> <br /> -->
@@ -116,17 +116,9 @@
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td>3/8/2021</td>
-      <td><b>Quiz 1 Released</b> - Due by 3/12/2021</td>
-      <td>
-        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Take the Quiz</a><br />
-      </td>
-    </tr>
-    <tr>
       <td>06</td>
-      <td>3/8/2021</td>
-      <td>Containers: Running & Using<br /><b>NO DISCUSSION 3/11/2021</b></td>
+      <td>3/8/2024</td>
+      <td>Containers: Running & Using</td>
       <td>
         <img src="../images/book.png" /> <a href="https://docs.docker.com/get-started/overview/" target="_new">Docker Overview</a> <br />
         <img src="../images/book.png" /> <a href="https://towardsdatascience.com/docker-for-data-science-a-step-by-step-guide-1e5f7f3baf8e" target="_new">Docker for Data Science</a> <br />
@@ -137,7 +129,7 @@
     </tr>
     <tr>
       <td>07</td>
-      <td>3/15/2021</td>
+      <td>3/15/2024</td>
       <td>Containers: Building & Deploying</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=7-7p6WuDtbs" target="_new">Containerizing ML</a> <br />
@@ -147,7 +139,7 @@
     </tr>
     <tr>
       <td>08</td>
-      <td>3/22/2021</td>
+      <td>3/22/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=qI_g07C_Q5I" target="_new">Martin Fowler</a> <br />
@@ -156,16 +148,8 @@
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td>3/29/2021</td>
-      <td><b>Quiz 2 Released</b></td>
-      <td>
-        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new" style="font-weight:bold;">Take the Quiz</a><br />
-      </td>
-    </tr>
-    <tr>
       <td>09</td>
-      <td>3/29/2021</td>
+      <td>3/29/2024</td>
       <td>SQL & Relational Database Services</td>
       <td>
         <img src="../images/book.png" /> <a href="../assets/learning-mysql.pdf" target="_new">Learning MySQL</a> <br />
@@ -175,28 +159,14 @@
     </tr>
     <tr>
       <td>10</td>
-      <td>4/5/2021</td>
+      <td>4/5/2024</td>
       <td><i>Catch-Up</i></td>
       <td></td>
     </tr>
     <tr>
-      <td></td>
-      <td>4/12/2021</td>
-      <td><b>Quiz 3 Released</b></td>
-      <td>
-        <img src="../images/writing.png" /> <a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new"><b>Take the Quiz</b></a><br />
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>4/14/2021</td>
-      <td><b>Data Project 1 Due</b></td>
-      <td><img src="../images/writing.png" /> <a href="../assets/data-project-1.pdf" style="font-weight:bold"> See prompt</a></td>
-    </tr>
-    <tr>
       <td>11</td>
-      <td>4/12/2021</td>
-      <td>NoSQL & Unstructured Data<br /><b>NO DISCUSSION 4/15/2021</b></td>
+      <td>4/12/2024</td>
+      <td>NoSQL & Unstructured Data</td>
       <td>
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=uD3p_rZPBUQ" target="_new">Intro to NoSQL</a> <br />
         <img src="../images/video.png" /> <a href="https://www.youtube.com/watch?v=pWbMrx5rVBE" target="_new">MongoDB in 30 Minutes</a> <br />
@@ -205,7 +175,7 @@
     </tr>
     <tr>
       <td>12</td>
-      <td>4/19/2021</td>
+      <td>4/19/2024</td>
       <td>NoSQL Database Services</td>
       <td>
         <img src="../images/check.png" /> <a href="https://nmagee.github.io/ds2002/lectures/12-nosql-datasci.html#exercise" target="_new">MongoDB Data Ingestion</a> <br />
@@ -215,7 +185,7 @@
     </tr>
     <tr>
       <td>13</td>
-      <td>4/26/2021</td>
+      <td>4/26/2024</td>
       <td>Cloud Solutions</td>
       <td>
         <img src="../images/lab.png" /> <a href="" target="_new">ML Quests (select)</a> <br />
@@ -224,37 +194,13 @@
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td>4/26/2021</td>
-      <td><b>Quiz 4 Released</b></td>
-      <td>
-        <img src="../images/writing.png" /> <b><a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new">Take the Quiz</a></b><br />
-      </td>
-    </tr>
-    <tr>
       <td>14</td>
-      <td>5/3/2021</td>
+      <td>5/3/2024</td>
       <td>Wrapping Up</td>
       <td> </td>
     </tr>
-    <tr>
-      <td></td>
-      <td>5/3/2021</td>
-      <td><b>Bonus Quiz Released</b></td>
-      <td>
-        <img src="../images/writing.png" /> <b><a href="https://collab.its.virginia.edu/portal/site/9e426afd-db24-4745-996a-47ebebaee120/tool/6beca874-fc47-4fac-a5b8-b832ff491940/jsf/index/mainIndex" target="_new">Take the Quiz</a></b><br />
-      </td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>5/10/2021</td>
-      <td><b>Data Project 2 Due</b></td>
-      <td><img src="../images/writing.png" /> <a href="../assets/data-project-2.pdf" style="font-weight:bold"> See prompt</a></td>
-    </tr>
   </tbody>
 </table>
-
-<a href="../labs/">Want more labs?</a>
 
       </section>
       <footer>
