Linkage from nav

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <div class="wrapper">
       <header>
         <h1><a href="https://nmagee.github.io/ds2002/" style="color:black;text-decoration:none;">DS2002 Data Science Systems I</a></h1>
-        <p>Neal Magee, Ph.D. <a href="mailto:nem2p@virginia.edu"><img src="images/email.png" alt="email" /></a><br />Solution Architect, Research Computing<br />University of Virginia, Spring 2024</p>
+        <p>Neal Magee, Ph.D.<br />Associate Professor, Data Science<br />University of Virginia, Spring 2024</p>
+
         <div style="min-height:2rem;"></div>
+
         <ul>
-          <li><a href="https://nmagee.github.io/ds2002/schedule/">Review the<strong>Schedule</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds3002-lectures" target="_new">View lectures<strong>YouTube</strong></a></li>
+          <li><a href="https://nmagee.github.io/ds2002/">Return to the<strong>Syllabus</strong></a></li>
+          <li><a href="https://canvas.its.virginia.edu/courses/105117" target="_new">Course LMS<strong>Canvas</strong></a></li>
+          <li><a href="https://github.com/nmagee/ds2002/" target="_new">Course Code<strong>GitHub</strong></a></li>
         </ul>
         <ul>
-          <li><a href="https://nmagee.github.io/ds2002/labs/">Full list of <strong>Labs</strong></a></li>
-          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>Qwiklabs</strong></a></li>
-          <li><a href="https://github.com/ds2002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
+          <li><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Full list of <strong>Labs</strong></a></li>
+          <li><a href="https://awsacademy.instructure.com/" target="_new">Hands-on <strong>AWS</strong></a></li>
+          <li><a href="" target="_new"><strong></strong></a></li>
         </ul>
-        <img alt="Discord" src="https://img.shields.io/discord/776171396153475093"> 
-        <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/m/nmagee/ds2002"> 
-        <img alt="GitHub last commit" src="https://img.shields.io/github/last-commit/nmagee/ds2002?color=red">
       </header>
 
 <section>
