--- a/schedule/index.html
+++ b/schedule/index.html
@@ -19,13 +19,13 @@
 
         <ul>
           <li><a href="https://nmagee.github.io/ds2002/">Return to the<strong>Syllabus</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds2002-lectures" target="_new">Course LMS<strong>Canvas</strong></a></li>
-          <li><a href="https://l.uvarc.io/ds2002-lectures" target="_new">Course Code<strong>GitHub</strong></a></li>
+          <li><a href="https://canvas.its.virginia.edu/courses/105117" target="_new">Course LMS<strong>Canvas</strong></a></li>
+          <li><a href="https://github.com/nmagee/ds2002/" target="_new">Course Code<strong>GitHub</strong></a></li>
         </ul>
         <ul>
-          <li><a href="https://nmagee.github.io/ds2002/labs/">Full list of <strong>Labs</strong></a></li>
-          <li><a href="https://qwiklabs.com/" target="_new">Hands-on <strong>AWS</strong></a></li>
-          <li><a href="https://github.com/ds2002/course/blob/main/README.md" target="_new">Course <strong>Container</strong></a></li>
+          <li><a href="https://canvas.its.virginia.edu/courses/105117/assignments" target="_new">Full list of <strong>Labs</strong></a></li>
+          <li><a href="https://awsacademy.instructure.com/" target="_new">Hands-on <strong>AWS</strong></a></li>
+          <li><a href="" target="_new"><strong></strong></a></li>
         </ul>
       </header>
 
